--- a/index.html
+++ b/index.html
@@ -26,9 +26,17 @@
     <li>fire fighter academy</li>
     <li>paramedic academy</li>
   </ul>
-<hr>
+  <hr>
   <h3>work experience</h3>
-  <table cellspacing="10">
+  <table>
+    <thread>
+      <tr>
+        <td>Dates</td>
+        <td>Work</td>
+      </tr>
+    </tr>
+  </thread>
+  <tbody>
     <tr>
       <td>2010-2013</td>
       <td>Lance Corperal US Marines</td>
@@ -40,8 +48,9 @@
       <td>2018-present</td>
       <td>Paramedic yuba-sutter area</td>
     </tr>
+  </tbody>
   </table>
-<hr>
+  <hr>
   <h3>skills</h3>
 
   <table cellspacing="10">
@@ -64,23 +73,7 @@
         </table>
       </td>
       <td>
-        <table cellspacing="10">
-
-          <tr>
-            <td>coding</td>
-            <td>🍕</td>
-          </tr>
-          <tr>
-            <td>als</td>
-            <td>🍕🍕🍕🍕🍕</td>
-          </tr>
-          <tr>
-            <td>chilling</td>
-            <td>🍕🍕🍕🍕🍕</td>
-          </tr>
-        </table>
-      </td>
-    </tr>
+      
   </table>
   <hr>
 
