--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/web profile pic.JPG" alt="star of life"></td>
+      <td><img src="images/profile.JPG" alt="star of life"></td>
       <td>
         <h1>Nik Moreno</h1>
         <p><em><strong>paramedic</strong> and web delepment intern.</em></p>
