--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/nikkolas.png" alt="star of life"></td>
+      <td><img src="images/nikkolas.png" alt="nikkolas profile picture"></td>
       <td>
         <h1>Nik Moreno</h1>
         <p><em><strong>paramedic</strong> and web delepment intern.</em></p>
